@@ -1,3 +1,7 @@
+2018-11-28  Carl Hetherington  <cth@carlh.net>
+
+	* Write config.xml with CR/LF terminators on Windows (#1402).
+
 2018-11-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.13.73 released.
